fix(swarm): prevent horizontal scrolling

--- a/app/client/stylesheets/components/pu-swarm.sass
+++ b/app/client/stylesheets/components/pu-swarm.sass
@@ -3,6 +3,7 @@
     background-color: $color-primary
     $pagewidth: 1320px
     padding: 0px
+    overflow: hidden
 
     header
         width: 100%
